--- a/monitor/src/main/resources/application.properties
+++ b/monitor/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=monitor
 spring.jpa.hibernate.ddl-auto=update 
 spring.datasource.url=jdbc:postgresql://localhost:5432/Atv00
 spring.datasource.username=postgres
-spring.datasource.password=gripenng
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 file.upload_dir = src\\main\\resources\\static\\img-perfil
